samples/_failures_safe/1761044702_06bcde_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4887768f.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_4887768f.c:128:5: error: expected declaration or statement at end of input
  128 |     printf("\nEntries with level %s:\n", level);
      |     ^~~~~~
